$Id$

2003-10-21 Tilman Sauerbeck <tilman@code-monkey.de>
        * configure.ac: check for sys/soundcard.h to determine whether
          the OSS output plugin should be built
        * src/vorbis.c, src/output: added output plugin stuff to replace
          libao
        * src/output/oss/oss.c: added OSS output plugin
        * src/mixer.c, src/mixer.h: removed, mixer is controlled by the
          output plugin now
        * misc other stuff

2003-10-18 Tilman Sauerbeck <tilman@code-monkey.de>
        * src/vorbis.c: track_open() initializes the "time_text"
          part, too
        * src/callbacks.c: when cb_track_next() is called after the
          last playlist item, it moves to the beginning again, without
          starting playback.
        * src/callbacks.c: cb_track_prev() does nothing when it's
          called on the beginning of the playlist

2003-10-17 Tilman Sauerbeck <tilman@code-monkey.de>
        * src/mixer.c, src/mixer.h, src/eplayer.c, src/callbacks.c,
          interface.c:
          Rewrote mixer code, the mixer is periodically read now to
          reflect changes made by other applications
        * src/eplayer.c: Added _playback_start(), _playback_stop()
        * src/vorbis.c: The "time" part is updated in a sane
          period now
        * src/vorbis.c, src/eplayer.c: Tidied up libao calls
        * data/eplayer.edc: buttons emit their signals on mouse_up now
        * src/vorbis.c: Fixed a memory leak which was caused by not
          calling ao_close() in track_close()
        * data/eplayer.edc, src/callbacks.c, src/interface.c:
          The playlist can be scrolled using the mousewheel now
        * src/eplayer.c: check ao_default_driver_id() on startup

2003-10-16 Tilman Sauerbeck <tilman@code-monkey.de>
        * configure.ac: Added endianess-check, added --enable-debug
          switch
        * src/eplayer.c, src/playlist.c: added playlist_load_any(),
          eplayer will now load files and directories as well