@@ -1,0 +1,11 @@
+# $Id$
+
+if HAVE_SOLARIS
+
+plugin_LTLIBRARIES = libSolaris.la
+plugindir = @PLUGIN_DIR@/output
+
+libSolaris_la_SOURCES = solaris.c
+libSolaris_la_LDFLAGS = -module -avoid-version
+
+endif
